--- a/app/src/main/res/layout/currently_reading_book_list_item.xml
+++ b/app/src/main/res/layout/currently_reading_book_list_item.xml
@@ -1,15 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="88dp"
     android:padding="16dp">
+
+    <ImageView
+        android:id="@+id/img"
+        android:layout_marginTop="6dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginRight="16dp"
+        android:src="@drawable/ic_notebook" />
+
 
     <TextView
         android:id="@+id/bookTitleTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/img"
         android:text="Book Title"
         android:textSize="16dp"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/bookAuthorTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/bookTitleTextView"
+        android:layout_toRightOf="@id/img"
+        android:text="Author" />
+
+    <TextView
+        android:id="@+id/addedOnTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/bookAuthorTextView"
+        android:layout_toRightOf="@id/img"
+        android:text="19.01.2019" />
+
+
+    <TextView
+        android:id="@+id/dayTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+
+        android:text="1" />
+
+    <TextView
+        android:visibility="gone"
+        android:id="@+id/finishedReadingTextView"
+        android:layout_below="@id/dayTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:text="FINISH" />
+
+
 
 </RelativeLayout>
