--- a/app/src/main/res/layout/fragment_currently_reading_books.xml
+++ b/app/src/main/res/layout/fragment_currently_reading_books.xml
@@ -13,9 +13,21 @@
         android:padding="10dp">
 
         <ListView
+            android:visibility="gone"
             android:id="@+id/currentlyReadingListView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"></ListView>
+
+        <android.support.v7.widget.RecyclerView
+            android:visibility="visible"
+            android:layout_width="match_parent"
+            android:id="@+id/list"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:layout_height="wrap_content"
+            >
+
+        </android.support.v7.widget.RecyclerView>
 
     </LinearLayout>
 
@@ -24,7 +36,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_margin="10dp"
+        android:layout_margin="20dp"
+        android:tint="@android:color/white"
         android:src="@android:drawable/ic_input_add"
         >
 
